<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   	<item
        android:id="@+id/action_animate"
        android:orderInCategory="109"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_video"
        android:title="@string/action_animate"/>
   	<item
        android:id="@+id/action_pause"
        android:orderInCategory="109"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_pause"
        android:title="@string/action_pause"/>
   	<item
        android:id="@+id/action_play"
        android:orderInCategory="109"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_play"
        android:title="@string/action_play"/>
   	<item
        android:id="@+id/action_stop"
        android:orderInCategory="110"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_stop"
        android:title="@string/action_stop"/>
</menu>
